syntax = "proto3";

package rpc;

message WriteBackCacheRequest {
    double usage = 1;
}

message WriteBackCacheResponse {
    bool ok = 1;
}